@@ -33,12 +33,12 @@ REPOSITORY
     <https://github.com/tupinek/Error-Pure-ANSIColor>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2013-2017 Michal Špaček
+    © 2013-2017 Michal Josef Špaček
 
     BSD 2-Clause License
 
