@@ -1,5 +1,6 @@
 0.27
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Update author name.
  - Update Module::Install to 1.19 version.
 
 0.26 2017-11-24T11:30:49+01:00
